@@ -25,6 +25,17 @@ application {
 
 run{
     standardInput = System.in
+    jvmArgs = [
+        '--add-modules', 'jdk.incubator.vector',
+        '--enable-native-access=ALL-UNNAMED'
+    ]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        "--enable-preview",
+        "--add-modules=jdk.incubator.vector"
+    ]
 }
 
 description = 'Sirix/Brackit binding.'
@@ -62,6 +73,7 @@ test {
     def baseArgs = [
         '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
         '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-modules', 'jdk.incubator.vector',
         '--enable-native-access=ALL-UNNAMED',
         '-XX:+UnlockDiagnosticVMOptions',
         '-XX:+DebugNonSafepoints',
