@@ -70,7 +70,13 @@ jar {
 }
 
 test {
-    jvmArgs "-Duser.home=${buildDir}"
+    jvmArgs = [
+        "-Duser.home=${buildDir}",
+        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+        '--add-modules', 'jdk.incubator.vector',
+        '--enable-native-access=ALL-UNNAMED'
+    ]
 }
 
 task copyCertificates(type: Copy) {
